# UpdateMaaResourceScript

./: Cargo.toml
src/: main.rs
